Fix jdk8 vs jdk9 problem when building uberjar